# depot

./: .dockerignore  .gitignore  Dockerfile  README.md  config.example.toml  docker-compose.yml  files.json  launcher.sh  pyproject.toml
.claude/: launch.json
depot/: __init__.py  __main__.py  app.py  cache.py  config.py  monitor.py  services.py  state.py  storage.py
depot/web/: __init__.py  admin.py  auth.py  public.py
static/css/: style.css
templates/: base.html  edit.html  index.html  login.html  manage.html  system.html
tests/: conftest.py  test_cache.py  test_config.py  test_storage.py  test_web.py
