[project]
name = "depot"
version = "2.0.0"
description = "FRC event file cache — local download hub for FRC events."
requires-python = ">=3.11"
dependencies = [
    "Flask>=3.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
